# PillageTheVillage

./: README.md
Designspec/: TDP005mall.cls  design.aux  design.fdb_latexmk  design.fls  design.out  design.tex  design.tex~  design.xdv  xelatex1630.fls
Game/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Game  Makefile  VillagePillage  cmake_install.cmake  entities.cc  entities.h  game.cc  game.h  game_executable  logic.cc  logic.h  main.cc  playfield.txt  sfml  state.cc  state.h
Game/legacy/: sfml_lab.cc
Game/states/: CMakeLists.txt  State.h  game.cc  game.h  game_executable
Game/testing/: game.cc  game.h  game_executable
Kodgranskning/: kod.aux  kod.fdb_latexmk  kod.fls  kod.out  kod.tex  kod.tex~  krav.tex~
Kravspec/: #krav.tex#  .#krav.tex  krav.aux  krav.fdb_latexmk  krav.fls  krav.out  krav.tex  krav.tex~  krav.xdv
